--- a/insurance-demo.ipynb
+++ b/insurance-demo.ipynb
@@ -320,6 +320,43 @@
     "'''\n",
     "assistant_prompt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_prompt = f'''\n",
+    "Customer: I need help with my claim.\n",
+    "Agent: Sure, I can help you with that. What is your claim?\n",
+    "Customer: my car was hit from the behind by a car. My policy number is 123456. I need to file a claim.\n",
+    "Agent: Okay, Can you please provide me your name?\n",
+    "Customer: Sure, My name is David Wilson.\n",
+    "Agent: Okay, I got the details. I will help you with the claim process. Let me check the available agents to assist you.\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Based on the provided information, the customer, David Wilson, has experienced a side collision with another vehicle, resulting in a claim for collision damage amounting to $7000. The customer has expressed frustration with the slow claim processing in the past.\\n\\nConsidering the nature of the claim and the customer's previous feedback, it would be best to assign a proactive agent with experience in handling auto insurance claims efficiently. Agent a42, Scarlett Bennett, stands out as a suitable choice with expertise in both health and auto insurance, along with 6 years of experience in auto insurance specifically. Scarlett Bennett's proactive approach and experience in handling auto claims make her a good match for David Wilson's current claim requirements. Therefore, I recommend assigning Agent a42, Scarlett Bennett, to assist David Wilson with his auto insurance claim for collision damage.\\n\\nFeel free to let me know if you need further assistance or any other recommendations.\""
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm_response = get_response(user_prompt, system_prompt, assistant_prompt)\n",
+    "llm_response.choices[0].message.content"
+   ]
   }
  ],
  "metadata": {
